force-app/main/default/objects/VGE_PL_Yearly_Product_Summary__c/VGE_PL_Yearly_Product_Summary__c.object-meta.xml
<CustomObject>
    <label>VGE PL Yearly Product Summary</label>
    <nameField>
        <label>VGE PL Yearly Product Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VGE PL Yearly Product Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>