force-app/main/default/objects/VGE_PL_Yearly_Product_Summary__c/fields/LookupIterationYearlySummary__c.field-meta.xml
<CustomField>
    <fullName>LookupIterationYearlySummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookupIterationYearlySummary</label>
    <referenceTo>VGE_PL_Iteration_Yearly_Summary__c</referenceTo>
    <relationshipLabel>VGE PL Yearly Product Summary</relationshipLabel>
    <relationshipName>VGE_PL_Yearly_Product_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>