force-app/main/default/objects/VGE_PL_Yearly_Product_Summary__c/fields/LookupSQTSubProduct__c.field-meta.xml
<CustomField>
    <fullName>LookupSQTSubProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookupSQTSubProduct</label>
    <referenceTo>VGE_PA_Sub_Product__c</referenceTo>
    <relationshipLabel>VGE PL Yearly Product Summary</relationshipLabel>
    <relationshipName>VGE_PL_Yearly_Product_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>