force-app/main/default/objects/VGE_PL_Yearly_Product_Summary__c/fields/LookupVGECountry__c.field-meta.xml
<CustomField>
    <fullName>LookupVGECountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LookupVGECountry</label>
    <referenceTo>PLCountry__c</referenceTo>
    <relationshipLabel>VGE PL Yearly Product Summary</relationshipLabel>
    <relationshipName>VGE_PL_Yearly_Product_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>