force-app/main/default/objects/VGE_PL_Yearly_Product_Summary__c/fields/Month_11_Connections__c.field-meta.xml
<CustomField>
    <fullName>Month_11_Connections__c</fullName>
    <label>Month 11 Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>