force-app/main/default/objects/VGE_PL_Yearly_Product_Summary__c/fields/P_L_Product__c.field-meta.xml
<CustomField>
    <fullName>P_L_Product__c</fullName>
    <formula>IF( LookupSQTSubProduct__c != null,  LookupSQTSubProduct__r.Name ,  LookupSQTProduct__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;L Product</label>
    <type>Text</type>
</CustomField>